@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.apache.felix</groupId>
 		<artifactId>felix-parent</artifactId>
-		<version>1.2.0</version>
+		<version>4</version>
 		<relativePath>../../../pom/pom.xml</relativePath>
 	</parent>
 
@@ -66,11 +66,23 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>src/**</include>
+                    </includes>
+                    <excludes>
+                        <exclude>src/main/resources/res/*.html</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
 
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.0.1</version>
+				<version>3.2.0</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -80,6 +92,9 @@
 						<Bundle-Activator>
 							org.apache.felix.webconsole.plugins.deppack.internal.Activator
                         </Bundle-Activator>
+                        <Embed-Dependency>
+                             org.apache.felix.utils;inline=org/apache/felix/utils/json/JSONWriter**
+                        </Embed-Dependency>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -96,7 +111,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.1.1</version>
+			<version>1.3.2</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
@@ -119,11 +134,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20070829</version>
-			<scope>compile</scope>
-			<optional>true</optional>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.utils</artifactId>
+			<version>1.9.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
